# vault-manager

./: .gitignore  AUTHORS  ChangeLog  README.md  bindep.txt  reinstall.sh  requirements.txt  setup.cfg  tox.ini
vault_config_template/: audit-devices.yml  auth-methods.yml  ldap.yml  secrets-engines.yml
vault_config_template/auth/: auth-methods.yml
vault_config_template/policies/: group_policy.hcl  policies.yml  user_policy.hcl
vaultmanager/: VaultManager.py  cli.py
vaultmanager/lib/: LDAPReader.py  VaultAuditDevice.py  VaultAuthMethod.py  VaultClient.py  VaultSecretEngine.py  utils.py
vaultmanager/lib/AuthMethods/: AuthMethodAppRole.py  AuthMethodLDAP.py  AuthMethodTemplate.py
vaultmanager/modules/: ModuleTemplate.py  VaultManagerAudit.py  VaultManagerAuth.py  VaultManagerKV.py  VaultManagerLDAP.py  VaultManagerPolicies.py  VaultManagerSecret.py
vaultmanager/tests/: conftest.py
vaultmanager/tests/functionnal/: arguments_test.py  audit_test.py  auth_test.py  ldap_test.py  policies_test.py  secrets_engines_test.py  vault_server_test.py
vaultmanager/tests/vault_config/: audit-devices.yml  auth-methods.yml  ldap-config.ldif  ldap.yml  secrets-engines.yml
vaultmanager/tests/vault_config/policies/: group_policy.hcl  policies.yml
vaultmanager/tests/vault_config/policies/group/: group1.hcl  group2.hcl
vaultmanager/tests/vault_config/policies/service/: app1.hcl  app2.hcl
vaultmanager/tests/vault_config/policies/user/: user1.hcl  user2.hcl
