[metadata]
name = vaultmanager
summary = Managing Hashicorp Vault configuration
license = MIT
description-file =
    README.md
#url = http://pypi.python.org/pypi/
requires-python = >=3.4
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
author = Benoît Bayszczak
author_email=benoit.bayszczak@schibsted.com

[files]
packages =
    vaultmanager

[entry_points]
console_scripts =
    vault-manager = vaultmanager.cli:main